[package]
name = "pump_fun_sniper"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
solana-client= { version = "1.18.0"}
solana-sdk= { version = "1.18.0"}
reqwest= { version = "0.11", features = ["json", "rustls-tls"]}
serde= { version = "1.0.190", features = ["derive"]}
serde_json= { version = "1.0.100"}
log= { version = "0.4.14"}
env_logger= { version = "0.10.0"}
[build-dependencies]
tonic-build = "*"